--- a/index.html
+++ b/index.html
@@ -4,19 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Picture in Picture</title>
-    <link
-      rel="shortcut icon"
-      href="https://www.google.com/s2/u/0/favicons?domain=jacinto.design"
-      type="image/png"
-    />
+    <link rel="icon" type="image/png" href="favicon.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
       integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="sweetalert2.min.css" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="sweetalert2.min.css" />
   </head>
   <body>
     <!-- Video -->
@@ -27,6 +23,6 @@
     </div>
     <!-- script -->
     <script src="script.js"></script>
-    <script src="sweetalert2.all.min.js"></script>
+    <script src="./sweetalert2.all.min.js"></script>
   </body>
 </html>
